Fix feed tree counters vertical alignment

--- a/feedlish.less
+++ b/feedlish.less
@@ -182,7 +182,7 @@ body.ttrss_main {
 		// Re-align counters
 		.counterNode {
 			min-width: unset;
-			margin-top: unset;
+			margin-top: 1px;
 			line-height: unset;
 		}
 
